updated the image

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -11,8 +11,8 @@
     <h1>My Favorite City</h1>
     <p>My favorite city is Paris. I love its vibrant culture, rich history, beautiful architecture and delicious food.
     </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/1280px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg"
-        alt="La Tour Eiffel vue de la Tour Saint-Jacques, Paris.">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Notre-Dame_de_Paris_2013-07-24.jpg/800px-Notre-Dame_de_Paris_2013-07-24.jpg"
+        alt="Notre-Dame de Paris">
 </body>
 
 </html>
