--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> Emmanuel Kwasi Frempong| WDD 130 | Personal Homepage</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="C:\Users\kwasi\OneDrive\Documents\Git\wdd130\images\temple-small.webP" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1> Emmanuel Kwasi Frempong| WDD 130</h1>
+        <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong" width="200">
+        <p>My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural Resource
+            Management. I have
+            over five
+            years of combined experience in hospitality and FMCG sales, with strong skills in client relationship
+            management, sales
+            growth, and premium brand visibility. Beyond this, I am deeply passionate about cybersecurity and software
+            engineering,
+            and I am actively building my expertise in these fields to create innovative solutions and protect digital
+            systems. I am
+            committed to personal growth, faith, and resilience, with a vision of building a meaningful career that
+            blends
+            technology, security, and service.</p>
+
+    </main>
+    <footer>
+        <p>©️ 2025 💻 Emmanuel Kwasi Frempong 💻 Accra, Ghana📍🌍</p>
+    </footer>
+    <h1>Welcome to WDD 130.</h1>
+    <p>This page will become your homepage for the course. You will remove this text and replace it with your own
+        personal details.</p>
+
+    <img src="images\salt-lake-temple.webp" alt="The Salt Lake Temple.">
 </body>
+
 </html>
