--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <main>
         <h1> Emmanuel Kwasi Frempong| WDD 130</h1>
         <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong" width="200">
-        <p>My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural Resource
+        <p> Hello! My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural
+            Resource
             Management. I have
             over five
             years of combined experience in hospitality and FMCG sales, with strong skills in client relationship
@@ -34,11 +35,6 @@
     <footer>
         <p>©️ 2025 💻 Emmanuel Kwasi Frempong 💻 Accra, Ghana📍🌍</p>
     </footer>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own
-        personal details.</p>
-
-    <img src="images\salt-lake-temple.webp" alt="The Salt Lake Temple.">
 </body>
 
 </html>
