--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Emmanuel Kwasi Frempong">
 </head>
+
 <body>
-    
-</body>
+    <header>
+        <img src="images/basic-logo.png" alt="An image of the logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="https://byui.edu">BYU Idaho</a>
+            </li>
+            <li><a href="https://churchofjesuschrist.org">The Church</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>
+            Basic HTML Structure
+
+        </h1>
+        <section>
+            <h2>Heading</h2>
+            <p></p>
+
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ad, eaque voluptatem magnam pariatur et
+                aut. Iure eius omnis a distinctio consequuntur sunt, itaque, repellat atque culpa, alias saepe
+                dignissimos.</p>
+
+        </section>
+
+    </main>
+    <aside><img
+            src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/adelaide-australia/800x450/adelaide-australia-temple-lds-866420-wallpaper.jpg"
+            alt="Australia Temple" width="200"></aside>
+
+</body>'
+<footer> ©️ Emmanuel Kwasi Frempong 2025</footer>
+
 </html>
