--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -42,9 +42,10 @@
     </main>
     <aside><img
             src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/adelaide-australia/800x450/adelaide-australia-temple-lds-866420-wallpaper.jpg"
-            alt="Australia Temple" width="200"></aside>
+            alt="Australia Temple" width="200">
+    </aside>
 
-</body>'
+</body>
 <footer> ©️ Emmanuel Kwasi Frempong 2025</footer>
 
 </html>
