basic-layout updated

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -28,7 +28,9 @@
         </h1>
         <section>
             <h2>Heading</h2>
-            <p></p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus numquam modi quibusdam? Repudiandae
+                dignissimos dolorum quidem vitae eligendi ea voluptatum, rerum error blanditiis, laudantium ut corporis
+                nisi animi dolor cumque?</p>
 
         </section>
         <section>
