updated css for index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Emmanuel Kwasi Frempong| WDD 130 | Personal Homepage</title>
+    <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
+    <meta name="author" content="Emmanuel Kwasi Frempong">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -33,6 +35,15 @@
             technology, security, and service.</p>
 
     </main>
+    <aside>
+        <h2> Ghana </h2>
+        <img src="images/square.webp" alt="Image of the iconic Independence Square" width="500">
+        <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse landscape
+        including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain independence from
+        colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy, primarily driven by natural
+        resources like gold, cocoa, and oil. The capital is Accra, and the country is characterized by its warm, welcoming
+        population and vibrant cultural scene</p>
+    </aside>
     <footer>
         <p>©️ 2025 💻 Emmanuel Kwasi Frempong 💻 Accra, Ghana📍🌍</p>
     </footer>
