--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h1> Emmanuel Kwasi Frempong | WDD 130</h1>
-        <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong" width="200">
+        <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong">
         <p> Hello! My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural
             Resource
             Management. I have
