Updated image rule.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
     <aside>
         <h2> Ghana </h2>
-        <img src="images/square.webp" alt="Image of the iconic Independence Square" width="200">
+        <img src="images/square.webp" alt="Image of the iconic Independence Square">
         <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse landscape
         including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain independence from
         colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy, primarily driven by natural
