--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Emmanuel Kwasi Frempong| WDD 130 | Personal Homepage</title>
+    <title> Emmanuel Kwasi Frempong| WDD 130 | Personal Homepage </title>
     <meta name="description"
         content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
-    <meta name="author" content="Emmanuel Kwasi Frempong">
+    <meta name="author"
+        content="Emmanuel Kwasi Frempong, pursuing course WDD 130. The purpose of the page is to display my personal home page.">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
