--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </main>
     <aside>
         <h2> Ghana </h2>
-        <img src="images/square.webp" alt="A picture of the iconic Independence Square">
+        <img src="images/square.jpg" alt="A picture of the iconic Independence Square">
         <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
             landscape
             including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain
