--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
         <h2> Ghana </h2>
         <img src="images/square.jpg" alt="A picture of the iconic Independence Square">
         <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
-            landscape
-            including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain
-            independence from
-            colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy, primarily driven
-            by natural
-            resources like gold, cocoa, and oil. The capital is Accra, and the country is characterized by its warm,
-            welcoming
-            population and vibrant cultural scene</p>
+            landscape including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain
+            independence from colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy, primarily driven
+            by natural resources like gold, cocoa, and oil. The capital is Accra, and the country is characterized by its warm,
+            welcoming population and vibrant cultural scene</p>
     </aside>
     <footer>
         <p>©️ 2025 💻 Emmanuel Kwasi Frempong 💻 Accra, Ghana📍🌍</p>
