html file updated.

--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
         <h1> Emmanuel Kwasi Frempong | WDD 130</h1>
         <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong" width="200">
         <p> Hello! My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural
-            Resource
-            Management. I have
-            over five
-            years of combined experience in hospitality and FMCG sales, with strong skills in client relationship
-            management, sales
-            growth, and premium brand visibility. Beyond this, I am deeply passionate about cybersecurity and software
-            engineering,
-            and I am actively building my expertise in these fields to create innovative solutions and protect digital
-            systems. I am
-            committed to personal growth, faith, and resilience, with a vision of building a meaningful career that
-            blends
-            technology, security, and service.</p>
+            Resource Management. I have over five years of combined experience in hospitality and FMCG sales, with
+            strong skills in client relationship
+            management, sales growth, and premium brand visibility. Beyond this, I am deeply passionate about
+            cybersecurity and software
+            engineering, and I am actively building my expertise in these fields to create innovative solutions and
+            protect digital
+            systems. I am committed to personal growth, faith, and resilience, with a vision of building a meaningful
+            career that
+            blends technology, security, and service.</p>
 
     </main>
     <aside>
         <h2> Ghana </h2>
         <img src="images/square.jpg" alt="A picture of the iconic Independence Square">
         <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
-            landscape including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to gain
-            independence from colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy, primarily driven
-            by natural resources like gold, cocoa, and oil. The capital is Accra, and the country is characterized by its warm,
+            landscape including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to
+            gain
+            independence from colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy,
+            primarily driven
+            by natural resources like gold, cocoa, and oil. The capital is Accra, and the country is characterized by
+            its warm,
             welcoming population and vibrant cultural scene</p>
     </aside>
     <footer>
