rafting site created, styled and updated.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <meta name="author"
         content="Emmanuel Kwasi Frempong, pursuing course WDD 130. The purpose of the page is to display my personal home page.">
     <link rel="stylesheet" href="styles/styles.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -17,6 +22,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">Linkedin Profile</a>
+            <a href="https://facebook.com">Facebook Profile</a>
         </nav>
     </header>
     <main>
@@ -33,8 +40,15 @@
             career that
             blends technology, security, and service.</p>
 
+            <ul class="box indent">
+                <li><a href="https://newsroom.churchofjesuschrist.org/media/960x540/Accra-Ghana-Temple-1-6-12-2.jpg" target="_blank">Accra Ghana Temple</a></li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/media/960x540/Aba-Nigeria-Temple-1-6-12-1.jpg" target="_blank">Aba Nigeria Temple</a></li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/media/960x540/Bern_Switzerland_Temple3.jpg" target="_blank">Bern Switzerland Temple</a></li>
+                <li></li>
+            </ul>
+
     </main>
-    <aside>
+    <aside class="box">
         <h2> Ghana </h2>
         <img src="images/square.jpg" alt="A picture of the iconic Independence Square">
         <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
