--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,7 +16,7 @@
     <header>
         <img src="images/logo.jpg" alt="logo Icon">
         <nav>
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a> </a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
@@ -37,11 +37,8 @@
 
             <section>
                 <h2>History</h2>
-                <p>Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river.
-                    From humble
-                    beginnings, we’ve grown into a trusted rafting company known for safe, fun, and family-friendly
-                    adventures. Our mission
-                    remains the same—creating unforgettable memories on every ride.</p>
+                <p> Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river. From humble
+                    beginnings, we’ve grown into a trusted rafting company known for safe, fun, and family-friendly adventures. Our mission remains the same—creating unforgettable memories on every ride.</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
@@ -51,13 +48,13 @@
         <p> ©️2015 Whitewater Family Rafting Emmanuel Kwasi Frempong </p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook-square.svg" alt="facebook Icon">
+                <img src="images/facebook.jpg" alt="facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin-square.svg" alt="linkedin Icon">
+                <img src="images/linkedin.jpg" alt="linkedin Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram-square.svg" alt="instagram Icon">
+                <img src="images/instagram.jpg" alt="instagram Icon">
             </a>
 
         </nav>
