article tag updated

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,7 +17,7 @@
         <img src="images/logo.jpg" alt="logo Icon">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a> </a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
             <a href="https://linkedin.com">Linkedin Profile</a>
@@ -31,18 +31,19 @@
             <article>
                 <img src="images/articleimage.jpg" alt="Image of Happy Clients">
                 <p> - To create unforgettable river adventures that bring families, friends, and nature together in joy,
-                    safety, and
-                    harmony.</p>
+                    safety, and harmony.</p>
             </article>
-
-            <section>
-                <h2>History</h2>
-                <p> Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river. From humble
-                    beginnings, we’ve grown into a trusted rafting company known for safe, fun, and family-friendly adventures. Our mission remains the same—creating unforgettable memories on every ride.</p>
-            </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-            </section>
+        </div>
+        <section>
+            <h2>History</h2>
+            <p> Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river. From
+                humble
+                beginnings, we’ve grown into a trusted rafting company known for safe, fun, and family-friendly
+                adventures. Our mission remains the same—creating unforgettable memories on every ride.</p>
+        </section>
+        <section>
+            <h2>Adventure Awaits You!</h2>
+        </section>
     </main>
     <footer>
         <p> ©️2015 Whitewater Family Rafting Emmanuel Kwasi Frempong </p>
