--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,20 +46,20 @@
         </section>
     </main>
     <footer>
-        <p> ©️2015 Whitewater Family Rafting Emmanuel Kwasi Frempong </p>
+        <p>© 2025 Whitewater Family Rafting | Emmanuel Kwasi Frempong</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.jpg" alt="facebook Icon">
+                <img src="images/facebook.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin.jpg" alt="linkedin Icon">
+                <img src="images/linkedin.jpg" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="instagram Icon">
+                <img src="images/instagram.jpg" alt="Instagram Icon">
             </a>
-
         </nav>
     </footer>
+
 
 </body>
 
