about.html file updated accordingly.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://facebook.com">Facebook Profile</a>
         </nav>
     </header>
-    <main>
+    <main class="grid">
         <h1> Emmanuel Kwasi Frempong | WDD 130</h1>
         <img src="images/profile.webp" alt="Hello, my name is Emmanuel Kwasi Frempong" width="200">
         <p> Hello! My name is Emmanuel Kwasi Frempong. I am a proud Ghanaian and I hold a bachelor’s degree in Natural
@@ -48,10 +48,10 @@
             </ul>
 
     </main>
-    <aside class="box">
+    <aside class="grid">
         <h2> Ghana </h2>
         <img src="images/square.jpg" alt="A picture of the iconic Independence Square">
-        <p>Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
+        <p> Ghana is a country in West Africa located on the Gulf of Guinea, known for its tropical climate, diverse
             landscape including rainforests and savanna, and rich cultural heritage. As the first sub-Saharan nation to
             gain
             independence from colonial rule in 1957, it has evolved into a multi-party democracy with a growing economy,
