--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,79 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- History Section -->
+<section class="history">
+    <h2>History</h2>
+    <div class="history-content">
+        <p>
+            Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river.
+            From humble beginnings, we’ve grown into a trusted rafting company known for safe, fun, and
+            family-friendly adventures.
+        </p>
+        <img src="images/history.jpg" alt="Rafting History">
+        <p>
+            Our mission remains the same—creating unforgettable memories on every ride.
+            Over the years, thousands of families and adventurers have joined us to
+            experience the thrill and serenity of whitewater rafting.
+        </p>
+    </div>
+</section>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Company</title>
-    <meta name="description"
-        content="“Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures! Experience the rush of free-flowing rapids, breathtaking scenery, and unforgettable outdoor excitement. Whether you’re a first-time rafter or a seasoned adventurer, we bring you the perfect mix of fun, safety, and adrenaline on every ride.”">
-    <meta name="author" content="Emmanuel Kwasi Frempong">
-    <link rel="stylesheet" href="styles/rafting.css">
-
-</head>
-
-<body>
-    <header>
-        <img src="images/logo.jpg" alt="logo Icon">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
-    </header>
-    <main>
-        <!-- Hero Section -->
-        <div class="hero">
-            <img src="images/heroimage.jpg" alt="Rafting Adventure">
-            <h1>Whitewater Family Rafting</h1>
-        </div>
-
-        <!-- Article Section -->
-        <article>
-            <p>
-                To create unforgettable river adventures that bring families, friends, and nature together in joy,
-                safety, and harmony.
-            </p>
-            <img src="images/articleimage.jpg" alt="Happy Clients">
-        </article>
-
-        <!-- History Section -->
-        <section>
-            <h2>History</h2>
-            <p>
-                Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river.
-                From humble beginnings, we’ve grown into a trusted rafting company known for safe, fun, and
-                family-friendly adventures. Our mission remains the same—creating unforgettable memories on every ride.
-            </p>
-        </section>
-
-        <!-- Adventure Section -->
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <p>
-                Whether you’re a first-time rafter or a seasoned adventurer, our trips are designed to bring excitement,
-                safety, and joy to everyone who loves the river. Join us and create your next great memory!
-            </p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Whitewater Family Rafting | Emmanuel Kwasi Frempong</p>
-        <nav class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="images/facebook.jpg" alt="Facebook Icon">
-            </a>
-            <a href="https://linkedin.com">
-                <img src="images/linkedin.jpg" alt="LinkedIn Icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="Instagram Icon">
-            </a>
-        </nav>
-    </footer>
-
-
-</body>
-
-</html>
+<!-- Adventure Section -->
+<section class="adventures">
+    <h2>Adventure Awaits You!</h2>
+    <div class="adventure-gallery">
+        <figure>
+            <img src="images/adventure01.jpg" alt="Los Dientes del Diablo">
+            <figcaption>Los Dientes del Diablo</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure02.jpg" alt="Big Mallard">
+            <figcaption>Big Mallard</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure03.jpg" alt="Half Day Adventure">
+            <figcaption>Half Day Adventure</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure04.jpg" alt="Full Day Experience">
+            <figcaption>Full Day Experience</figcaption>
+        </figure>
+        <figure>
+            <img src="images/adventure05.jpg" alt="Water Rush">
+            <figcaption>Water Rush</figcaption>
+        </figure>
+    </div>
+</section>
