css and html updated.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,44 +1,126 @@
-<!-- History Section -->
-<section class="history">
-    <h2>History</h2>
-    <div class="history-content">
-        <p>
-            Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the river.
-            From humble beginnings, we’ve grown into a trusted rafting company known for safe, fun, and
-            family-friendly adventures.
-        </p>
-        <img src="images/history.jpg" alt="Rafting History">
-        <p>
-            Our mission remains the same—creating unforgettable memories on every ride.
-            Over the years, thousands of families and adventurers have joined us to
-            experience the thrill and serenity of whitewater rafting.
-        </p>
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Adventure Section -->
-<section class="adventures">
-    <h2>Adventure Awaits You!</h2>
-    <div class="adventure-gallery">
-        <figure>
-            <img src="images/adventure01.jpg" alt="Los Dientes del Diablo">
-            <figcaption>Los Dientes del Diablo</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure02.jpg" alt="Big Mallard">
-            <figcaption>Big Mallard</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure03.jpg" alt="Half Day Adventure">
-            <figcaption>Half Day Adventure</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure04.jpg" alt="Full Day Experience">
-            <figcaption>Full Day Experience</figcaption>
-        </figure>
-        <figure>
-            <img src="images/adventure05.jpg" alt="Water Rush">
-            <figcaption>Water Rush</figcaption>
-        </figure>
-    </div>
-</section>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Rafting Company</title>
+    <meta name="description"
+        content="Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures!" />
+    <meta name="author" content="Emmanuel Kwasi Frempong" />
+
+    <!-- Google font for headings -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/rafting.css">
+</head>
+
+<body>
+    <header class="site-header">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo.jpg" alt="Whitewater Family Rafting logo">
+            </a>
+        </div>
+
+        <nav class="site-nav" aria-label="Primary navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html" class="active">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
+
+    <main>
+        <!-- HERO -->
+        <section class="hero">
+            <img src="images/heroimage.jpg" alt="Rafting Adventure">
+            <h1>Whitewater Family Rafting</h1>
+        </section>
+
+        <!-- ARTICLE / MISSION -->
+        <article class="intro">
+            <div class="intro-text">
+                <p>
+                    To create unforgettable river adventures that bring families, friends, and nature together in joy,
+                    safety, and harmony.
+                </p>
+            </div>
+            <div class="intro-image">
+                <img src="images/articleimage.jpg" alt="Happy Clients">
+            </div>
+        </article>
+
+        <!-- HISTORY -->
+        <section class="history">
+            <h2>History</h2>
+            <div class="history-inner">
+                <div class="history-left">
+                    <p>
+                        Founded in 2015, Whitewater Family Rafting began with a passion for sharing the joy of the
+                        river.
+                        From humble beginnings, we’ve grown into a trusted rafting company known for safe, fun, and
+                        family-friendly adventures.
+                    </p>
+                </div>
+
+                <div class="history-media">
+                    <img src="images/history.jpg" alt="Rafting History">
+                </div>
+
+                <div class="history-right">
+                    <p>
+                        Our mission remains the same—creating unforgettable memories on every ride. Over the years,
+                        thousands of families and adventurers have joined us to experience the thrill and serenity of
+                        whitewater rafting.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- ADVENTURE GALLERY -->
+        <section class="adventures">
+            <h2>Adventure Awaits You!</h2>
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/adventure01.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure02.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure03.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure04.jpg" alt="Full Day Experience">
+                    <figcaption>Full Day Experience</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure05.jpg" alt="Water Rush">
+                    <figcaption>Water Rush</figcaption>
+                </figure>
+            </div>
+        </section>
+    </main>
+
+    <footer class="site-footer">
+        <p>© 2025 Whitewater Family Rafting | Emmanuel Kwasi Frempong</p>
+
+        <nav class="socialmedia" aria-label="Social links">
+            <a href="https://facebook.com" aria-label="Facebook">
+                <img src="images/facebook.jpg" alt="Facebook Icon">
+            </a>
+            <a href="https://linkedin.com" aria-label="LinkedIn">
+                <img src="images/linkedin.jpg" alt="LinkedIn Icon">
+            </a>
+            <a href="https://instagram.com" aria-label="Instagram">
+                <img src="images/instagram.jpg" alt="Instagram Icon">
+            </a>
+        </nav>
+    </footer>
+</body>
+
+</html>
