--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rafting Company</title>
     <meta name="description"
@@ -11,6 +11,7 @@
 
     <!-- Google font for headings -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
