--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="/wdd130/wwr/styles/rafting.css">
+
 </head>
 
 <body>
