link href updated

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,9 +11,7 @@
 
     <!-- Google font for headings -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-
-
-    <link rel="stylesheet" href="/wdd130/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
 
