--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rafting Company</title>
     <meta name="description"
-        content="Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures!" />
-    <meta name="author" content="Emmanuel Kwasi Frempong" />
+        content="Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures!">
+    <meta name="author" content="Emmanuel Kwasi Frempong">
 
     <!-- Google font for headings -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
