href link updated

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 
     <!-- Google font for headings -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://ekfrempong-devops.github.io/wdd130/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 
@@ -30,7 +30,7 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    
+
 
     <main>
         <!-- HERO -->
