css and html updated.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,7 +22,7 @@
 
         <nav class="site-nav" aria-label="Primary navigation">
             <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
