--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -17,7 +17,7 @@
             <fieldset>
                 <legend>Contact Information</legend>
                 <div class="form-item column2">
-                    <label for="fullname">Full name</label>
+                    <label for="fullname">Full name:</label>
                     <input type="text" id="fullname" name="fullname">
                 </div>
                 <div class="form-item column2">
@@ -40,7 +40,7 @@
                     <label for="pet">Do you have a household pet?</label>
                     <input type="checkbox" id="pet" name="pet">
                 </div>
-                <label for="feedback">List the places you have lived.</label>
+                <label for="feedback">List the places you have lived:</label>
                 <textarea name="feedback" id="feedback" rows="4"
                     placeholder="Accra-Ghana, Awoshie-Accra, Kumasi-Ahodwo"></textarea>
             </fieldset>
