--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,7 +15,7 @@
        HEADER SECTION
   ============================ -->
     <header>
-        <img src="images/logo.png" alt="White Water Rafting Company Logo" />
+        <img src="images/logo.jpg" alt="White Water Rafting Company Logo" />
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -110,9 +110,9 @@
     <footer>
         <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
         <div class="social">
-            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="Twitter"></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
