css and html updated

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us | White Water Rafting Company</title>
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="rafting.css" />
 </head>
 
 <body>
     <!-- ================== HEADER ================== -->
     <header>
-        <img src="images/logo.png" alt="White Water Rafting Logo">
+        <img src="images/logo.png" alt="White Water Rafting Logo" />
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -24,7 +24,7 @@
 
     <!-- ================== MAIN ================== -->
     <main>
-        <section class="company-info" style="text-align:center; margin-bottom: 20px;">
+        <section class="company-info" style="text-align: center; margin-bottom: 20px;">
             <h1>White Water Rafting Company</h1>
             <p>123 Main River Street<br>Kolob, California</p>
             <p>+1 999 999 9999<br>info@whitewater.com</p>
@@ -36,8 +36,7 @@
             <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.093949545228!2d-122.41941508468125!3d37.774929779759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808a3c4b3f1f%3A0xa0c9bfb49c3b6a69!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672560773204!5m2!1sen!2sus"
-                    allowfullscreen="" loading="lazy">
-                </iframe>
+                    allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <!-- Form -->
@@ -73,12 +72,12 @@
             <h2>We Are Here to Serve You</h2>
             <div class="employee-list">
                 <figure>
-                    <img src="images/employee1.jpg" alt="John Doe - Reservations Manager">
-                    <figcaption>John Doe - Reservations Manager</figcaption>
+                    <img src="images/employee1.jpg" alt="Jane Smith - Safety Coordinator">
+                    <figcaption>Jane Smith - Safety Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Jane Smith - Safety Coordinator">
-                    <figcaption>Jane Smith - Safety Coordinator</figcaption>
+                    <img src="images/employee2.jpg" alt="John Doe - Reservations Manager">
+                    <figcaption>John Doe - Reservations Manager</figcaption>
                 </figure>
                 <figure>
                     <img src="images/employee3.jpg" alt="Mike Johnson - Tour Guide">
