--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
 <body>
     <!-- ================== HEADER ================== -->
     <header>
-        <img src="images/logo.png" alt="White Water Rafting Logo" />
+        <img src="images/logo.jpg" alt="White Water Rafting Logo" />
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
