--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
 <body>
     <!-- ================== HEADER ================== -->
     <header>
-        <img src="images/logo.jpg" alt="White Water Rafting Logo" />
+        <img src="images/logo.png" alt="White Water Rafting Logo" />
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -43,25 +43,39 @@
             <form class="contact-form" action="#" method="post">
                 <h2>Get in Touch!</h2>
 
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
-
-                <label>Message Purpose:</label>
-                <div class="radio-group">
-                    <label><input type="radio" name="purpose" value="General Inquiry" required> General
-                        Inquiry</label><br>
-                    <label><input type="radio" name="purpose" value="Reservation Question"> Reservation
-                        Question</label><br>
-                    <label><input type="radio" name="purpose" value="Website Suggestion"> Website Suggestion</label>
+                <!-- Name Row -->
+                <div class="form-row">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
                 </div>
 
+                <!-- Email Row -->
+                <div class="form-row">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+
+                <!-- Radio Buttons Row -->
+                <div class="form-row">
+                    <label>Message Purpose:</label>
+                    <div class="radio-group-inline">
+                        <label><input type="radio" name="purpose" value="General Inquiry" required> General
+                            Inquiry</label>
+                        <label><input type="radio" name="purpose" value="Reservation Question"> Reservation
+                            Question</label>
+                        <label><input type="radio" name="purpose" value="Website Suggestion"> Website Suggestion</label>
+                    </div>
+                </div>
+
+                <!-- Message -->
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
 
-                <label><input type="checkbox" name="subscribe"> Please subscribe me to the monthly newsletter</label>
+                <!-- Checkbox Row -->
+                <div class="checkbox-row">
+                    <input type="checkbox" id="subscribe" name="subscribe">
+                    <label for="subscribe">Please subscribe me to the monthly newsletter</label>
+                </div>
 
                 <button type="submit">Send Message</button>
             </form>
