--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -2,18 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | White Water Rafting Company</title>
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
-    <link rel="stylesheet" href="rafting.css" />
+    <meta name="author" content="Emmanuel Kwasi Frempong">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <!-- ================== HEADER ================== -->
     <header>
-        <img src="images/logo.png" alt="White Water Rafting Logo" />
+        <img src="images/logo.png" alt="White Water Rafting Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -26,8 +27,8 @@
     <main>
         <section class="company-info" style="text-align: center; margin-bottom: 20px;">
             <h1>White Water Rafting Company</h1>
-            <p>123 Main River Street<br>Kolob, California</p>
-            <p>+1 999 999 9999<br>info@whitewater.com</p>
+            <p>123 Main River Street<br />Kolob, California</p>
+            <p>+1 999 999 9999<br />info@whitewater.com</p>
         </section>
 
         <!-- ========= Map and Form Section ========= -->
@@ -41,43 +42,43 @@
 
             <!-- Form -->
             <form class="contact-form" action="#" method="post">
-                <h2>Get in Touch!</h2>
-
-                <!-- Name Row -->
                 <div class="form-row">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
                 </div>
 
-                <!-- Email Row -->
                 <div class="form-row">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" placeholder="Your Email" required>
                 </div>
 
-                <!-- Radio Buttons Row -->
-                <div class="form-row">
-                    <label>Message Purpose:</label>
-                    <div class="radio-group-inline">
-                        <label><input type="radio" name="purpose" value="General Inquiry" required> General
-                            Inquiry</label>
-                        <label><input type="radio" name="purpose" value="Reservation Question"> Reservation
-                            Question</label>
-                        <label><input type="radio" name="purpose" value="Website Suggestion"> Website Suggestion</label>
+                <div class="form-row form-row--full">
+                    <label for="purpose1">Message Purpose:</label>
+                    <div class="radio-group">
+                        <label for="purpose1">
+                            <input type="radio" id="purpose1" name="purpose" value="General Inquiry" required>
+                            General Inquiry
+                        </label>
+                        <label for="purpose2">
+                            <input type="radio" id="purpose2" name="purpose" value="Reservation Question">
+                            Reservation Question
+                        </label>
+                        <label for="purpose3">
+                            <input type="radio" id="purpose3" name="purpose" value="Website Suggestion">
+                            Website Suggestion
+                        </label>
                     </div>
                 </div>
 
-                <!-- Message -->
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
 
-                <!-- Checkbox Row -->
                 <div class="checkbox-row">
-                    <input type="checkbox" id="subscribe" name="subscribe">
+                    <input type="checkbox" id="subscribe" name="subscribe" />
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                 </div>
 
-                <button type="submit">Send Message</button>
+                <button type="submit">Get In Touch!</button>
             </form>
         </section>
 
@@ -105,9 +106,9 @@
     <footer>
         <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
         <div class="social">
-            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
-            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
-            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook" /></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn" /></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram" /></a>
         </div>
     </footer>
 </body>
